--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,4 @@ RewriteRule ^gallery$ pages/gallery.php [L]
 RewriteRule ^abouts$ pages/abouts.php [L]
 RewriteRule ^programs$ pages/programs.php [L]
 RewriteRule ^events$ pages/events.php [L]
+RewriteRule ^contacts$ pages/contacts.php [L]
